@@ -484,14 +484,13 @@ static void datetime_read_rc_file(XfcePanelPlugin *plugin, t_datetime *dt)
   XfceRc *rc;
   t_layout layout;
   const gchar *date_font, *time_font, *date_format, *time_format;
-  const gchar *val;
 
   /* load defaults */
   layout = LAYOUT_DATE_TIME;
-  date_font = g_strdup("Bitstream Vera Sans 8");
-  time_font = g_strdup("Bitstream Vera Sans 10");
-  date_format = g_strdup("%Y/%m/%d");
-  time_format = g_strdup("%H:%M");
+  date_font = "Bitstream Vera Sans 8";
+  time_font = "Bitstream Vera Sans 10";
+  date_format = "%Y/%m/%d";
+  time_format = "%H:%M";
 
   /* open file */
   if((file = xfce_panel_plugin_lookup_rc_file(plugin)) != NULL)
@@ -502,18 +501,19 @@ static void datetime_read_rc_file(XfcePanelPlugin *plugin, t_datetime *dt)
     if(rc != NULL)
     {
       layout	  = xfce_rc_read_int_entry(rc, "layout", layout);
-      val = xfce_rc_read_entry(rc, "date_font", date_font);
-      date_font	  = g_strdup(val);
-      val = xfce_rc_read_entry(rc, "time_font", time_font);
-      time_font	  = g_strdup(val);
-      val = xfce_rc_read_entry(rc, "date_format", date_format);
-      date_format = g_strdup(val);
-      val = xfce_rc_read_entry(rc, "time_format", time_format);
-      time_format = g_strdup(val);
+      date_font   = xfce_rc_read_entry(rc, "date_font", date_font);
+      time_font   = xfce_rc_read_entry(rc, "time_font", time_font);
+      date_format = xfce_rc_read_entry(rc, "date_format", date_format);
+      time_format = xfce_rc_read_entry(rc, "time_format", time_format);
 
       xfce_rc_close(rc);
     }
   }
+
+  date_font   = g_strdup(date_font);
+  time_font   = g_strdup(time_font);
+  date_format = g_strdup(date_format);
+  time_format = g_strdup(time_format);
 
   /* set values in dt struct */
   datetime_apply_layout(dt, layout);
